avances en verticalizacion de animaciones

--- a/notebooks/03strings_func.ipynb
+++ b/notebooks/03strings_func.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cuadro_datos as cd\n",
+    "#import cuadro_datos as cd\n",
     "import herramientas as h"
    ]
   },
@@ -88,7 +88,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"media\\jupyter\\FuncCadenas@2025-04-20@15-20-03.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
+       "<video src=\"media\\jupyter\\FuncCadenas@2025-04-21@22-08-41.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -146,7 +146,7 @@
     "        #self.add(grilla)\n",
     "\n",
     "        mi_texto = \"\"\"\n",
-    "cadena = 'Hola mundo!'\n",
+    "cadena = 'hola mundo!'\n",
     "cadena.upper()\"\"\"\n",
     "        texto_interno = Text(\"hola.mundo!\")\n",
     "    \n",
