--- a/notebooks/04Modulo.ipynb
+++ b/notebooks/04Modulo.ipynb
@@ -161,6 +161,7 @@
     "        marco = RoundedRectangle(width=5.4, height=5.4, corner_radius=0.26, color = \"#AF317B\", fill_opacity=1, stroke_color=WHITE ).move_to(centro)\n",
     "        #imagen = ImageMobject(\"images\\\\robo_solo3.png\").scale(0.5)\n",
     "        reloj = Group(*[marco, circulos, numeros, hora, minutero, circulo_central])\n",
+    "        centro = reloj.get_center()    # Redefino el centro para que la aguja de la hora se mueva respecto de la nueva posición del centro del reloj\n",
     "        self.add(reloj)\n",
     "        horas_transcurridas = 355\n",
     "        girar_hora(12,horas_transcurridas)\n",
