Avance en la arquitectura, escisión de administracion y programacion

--- a/escenas/verticales/zplantilla_vertical.ipynb
+++ b/escenas/verticales/zplantilla_vertical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "80776989-ebd4-429d-9fd1-a28fb5468b57",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "248c8c3d-9426-4377-a5d0-341d518165b1",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0904d09e-1f0b-479f-8560-920c7e5eb280",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ec55c4f4-c551-4007-ac4e-eef4f7e89139",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d4d0a4f8-c4ae-4154-97b6-e3e20f29cfe7",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"media\\jupyter\\MiClaseVertical@2025-04-22@14-15-06.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
+       "<video src=\"media\\jupyter\\MiClaseVertical@2025-04-22@20-33-11.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -105,9 +105,8 @@
     "        self.camera.frame.scale(1)\n",
     "\n",
     "        # 3. Agregar rejilla\n",
-    "        grilla_vertical = h.GrillaVertical()\n",
-    "        self.add(grilla_vertical)\n",
-    "\n",
+    "        h.toggle_grilla(self, mostrar=True)\n",
+    "        # 4. Agregar logo\n",
     "        logo = h.LogoV()\n",
     "        self.add(logo)\n",
     "\n",
