nuevos layouts y funciones, comienzo animacion Insertion Sort

--- a/escenas/horizontales/prueba_layout_basico.ipynb
+++ b/escenas/horizontales/prueba_layout_basico.ipynb
@@ -12,20 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6f1fc7a3-2d67-4078-a998-303a08b09c1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config.media_width = \"75%\"\n",
-    "config.verbosity = \"WARNING\"\n",
-    "config.background_color = \"#24043d\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6e1de679-0cbd-4f91-beb4-53f5fb702447",
+   "execution_count": null,
+   "id": "390cd5bb-260b-40cf-85e7-3a4c9f6314ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +30,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "da20c10a-2129-4d6f-b7d9-71c27cb6b871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import src.herramientas as h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb5c1cba-4be3-4d97-8362-fc8040452172",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from layouts.basicos import en_linea_horizontal\n",
+    "# import src.funciones as f"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "bf64c183-757e-4e10-9621-9734ece5bdb1",
    "metadata": {},
@@ -52,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "85bdf747-b092-4ca8-a0eb-f0c91691fdf8",
+   "execution_count": 2,
+   "id": "6f1fc7a3-2d67-4078-a998-303a08b09c1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from layouts.basicos import en_linea_horizontal\n",
-    "from layouts.pruebas import en_grilla\n",
-    "from layouts.circular import en_circulo"
+    "config.media_width = \"75%\"\n",
+    "config.verbosity = \"WARNING\"\n",
+    "config.background_color = \"#24043d\""
    ]
   },
   {
