--- a/escenas/horizontales/zzzplantilla_animaciones-Copy1.ipynb
+++ b/escenas/horizontales/zzzplantilla_animaciones-Copy1.ipynb
@@ -45,8 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from layouts.basicos import en_linea_horizontal\n",
-    "# import src.funciones as f"
+    "from layouts.basicos import en_linea_horizontal\n",
+    "import src.funciones as f"
    ]
   },
   {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "id": "327ca9fe-3ed9-4da6-8397-bbc09d551ebc",
    "metadata": {},
    "outputs": [
@@ -83,9 +83,25 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                                                       "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9851851851851858\n",
+      "1.477777777777777\n",
+      "10.481666666666667\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<video src=\"media\\jupyter\\MiClase@2025-04-26@07-41-09.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
+       "<video src=\"media\\jupyter\\InsertionSort@2025-04-26@19-18-15.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -98,8 +114,8 @@
     }
    ],
    "source": [
-    "%%manim -ql MiClase\n",
-    "class MiClase(Scene): \n",
+    "%%manim -ql InsertionSort\n",
+    "class InsertionSort(Scene): \n",
     "#class MiClase(MovingCameraScene):\n",
     "    \n",
     "    def construct(self):\n",
@@ -111,9 +127,53 @@
     "        logo = h.Logo()\n",
     "        self.add(logo)\n",
     "\n",
-    "        grilla = h.GrillaRegla()\n",
-    "        self.add(grilla)\n",
-    "        self.wait(5)"
+    "        cartas_bulk = h.cargar_imagenes_desde_carpeta(\"cartas\")\n",
+    "        indices = [32, 12, 8, 24, 20, 28, 0, 16, 36]\n",
+    "        # Crear las cartas\n",
+    "        cartas = Group(*[cartas_bulk[i] for i in indices])\n",
+    "        en_linea_horizontal(cartas, espacio=1.25, alineacion=\"derecha\", max_izquierda=5, max_derecha=0, altura=1)\n",
+    "\n",
+    "        # FadeIn secuencial de las cartas\n",
+    "        self.play(LaggedStart(*[FadeIn(carta) for carta in cartas], lag_ratio=0.7))\n",
+    "\n",
+    "        # Movimiento grupal + scale\n",
+    "        self.play(cartas.animate.shift(1 * RIGHT + 2.25 * DOWN).scale(0.95))\n",
+    "\n",
+    "        # Crear los anchors (Point en cada centro de carta)\n",
+    "        anchors = Group(*[Point(carta.get_center()) for carta in cartas])\n",
+    "\n",
+    "        # Opcional para verlos: agregá puntitos rojos\n",
+    "        debug_dots = Group(*[Dot(anchor.get_center(), color=RED, radius=0.05) for anchor in anchors])\n",
+    "        self.add(debug_dots)\n",
+    "        self.add(anchors)\n",
+    "\n",
+    "        self.play(cartas[0].animate.shift(DOWN * 1.6))\n",
+    "        self.wait(1.25)\n",
+    "        self.play(cartas[2].animate.move_to(anchors[0].get_center()))\n",
+    "        self.wait(1.25)\n",
+    "        self.play(cartas[-2].animate.move_to(anchors[2].get_center()))\n",
+    "        self.wait(1.25)\n",
+    "        self.play(cartas[3].animate.shift(DOWN * 1.6))\n",
+    "        self.wait(1.25)\n",
+    "        self.play(cartas[4].animate.move_to(anchors[3].get_center()))\n",
+    "        self.wait(1.25)\n",
+    "        self.play(cartas[3].animate.move_to(anchors[4].get_center()))\n",
+    "        self.wait(1.25)\n",
+    "        self.play(cartas[6].animate.shift(DOWN * 1.6))\n",
+    "        self.wait(1.25)\n",
+    "        self.play(cartas[0].animate.move_to(anchors[6].get_center()))\n",
+    "        self.wait(1.25)\n",
+    "        self.play(cartas[-1].animate.move_to(anchors[-2].get_center()))\n",
+    "        self.wait(1.25)\n",
+    "        self.play(cartas[6].animate.move_to(anchors[-1].get_center()))\n",
+    "        print(cartas[0].width)   # Ancho de la carta\n",
+    "        print(cartas[0].height)  # Alto de la carta\n",
+    "        print(cartas.width)\n",
+    "\n",
+    "        #grilla = h.GrillaRegla()\n",
+    "        #self.add(grilla)\n",
+    "        self.wait(5)\n",
+    "        "
    ]
   },
   {
