--- a/escenas/horizontales/algoritmos_ordenamiento.ipynb
+++ b/escenas/horizontales/algoritmos_ordenamiento.ipynb
@@ -62,55 +62,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "012bd623-f20f-4618-a0b0-1c41aea28973",
+   "metadata": {},
+   "source": [
+    "# Fijate, creo que se puede simplificar el ordenamiento de las cartas con Succession(). Abajo el link\n",
+    "\n",
+    "[succession()](https://docs.manim.community/en/stable/reference/manim.animation.composition.Succession.html)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "id": "327ca9fe-3ed9-4da6-8397-bbc09d551ebc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.19.0</span>\n",
-       "\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m19.0\u001b[0m\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                                                       "
+      "UsageError: Cell magic `%%manim` not found.\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9851851851851858\n",
-      "1.477777777777777\n",
-      "10.481666666666667\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"media\\jupyter\\InsertionSort@2025-04-26@19-18-15.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
