primera animacion completa en colab

--- a/escenas/horizontales/04Modulo.ipynb
+++ b/escenas/horizontales/04Modulo.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "42149094-abc6-464e-9a69-d78877ad56dc",
    "metadata": {},
    "outputs": [
@@ -82,22 +82,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                                                       \r"
+      "UsageError: Cell magic `%%manim` not found.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<video src=\"media\\jupyter\\Reloj@2025-04-20@14-53-54.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
-       "      Your browser does not support the <code>video</code> element.\n",
-       "    </video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Video object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -114,7 +100,7 @@
     "            else:\n",
     "                angulo = -2*PI * factor    \n",
     "            \n",
-    "            if horas_transcurridas <= 12 & horas_transcurridas != 0:\n",
+    "            if horas_transcurridas <= 12 and horas_transcurridas != 0:\n",
     "                self.play(Rotate(hora, about_point=centro, angle=angulo, \n",
     "                  rate_func=linear)\n",
     "                         )\n",
@@ -166,7 +152,8 @@
     "        horas_transcurridas = 355\n",
     "        girar_hora(12,horas_transcurridas)\n",
     "        # Añadir los círculos a la escena\n",
-    "          \n",
+    "  # Agregar etiqueta que cuente las vueltas.  \n",
+    "  # Agregar la horas como una explosión de círculos desde el centro. Tengo un layout para eso.\n",
     "            \n",
     "        self.wait()"
    ]
@@ -198,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
