--- a/escenas/horizontales/prueba_layout_basico.ipynb
+++ b/escenas/horizontales/prueba_layout_basico.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "390cd5bb-260b-40cf-85e7-3a4c9f6314ae",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "dc52e5a2-a1b5-4836-847a-bc714727a15a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('C:/Users/Diego/Desktop/animaciones')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_path"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "da20c10a-2129-4d6f-b7d9-71c27cb6b871",
    "metadata": {},
@@ -40,12 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "eb5c1cba-4be3-4d97-8362-fc8040452172",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from layouts.basicos import en_linea_horizontal\n",
+    "import layouts.en_grilla as eg\n",
     "# import src.funciones as f"
    ]
   },
@@ -61,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "6f1fc7a3-2d67-4078-a998-303a08b09c1b",
    "metadata": {},
    "outputs": [],
@@ -1221,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "61967cc0-f15a-46b7-9ca4-e94978116887",
    "metadata": {},
    "outputs": [
@@ -1250,7 +1271,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"media\\jupyter\\TestGrilla@2025-04-25@17-18-47.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
+       "<video src=\"media\\jupyter\\TestGrilla@2025-05-05@10-08-49.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -1278,7 +1299,7 @@
     "        ])\n",
     "\n",
     "        # Aplicar el layout en grilla\n",
-    "        en_grilla(\n",
+    "        eg.en_grilla(\n",
     "            grupo=cuadrados,\n",
     "            columnas=9,\n",
     "            espacio_x=0.6,\n",
