funciones de estilo

--- a/layouts/panel_hexagonal_usos.ipynb
+++ b/layouts/panel_hexagonal_usos.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "327ca9fe-3ed9-4da6-8397-bbc09d551ebc",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"media\\jupyter\\HexagonalField@2025-04-28@15-34-15.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
+       "<video src=\"media\\jupyter\\HexagonalField@2025-05-25@08-58-43.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -140,8 +140,8 @@
     "class HexagonalField(Scene):\n",
     "    def construct(self):\n",
     "        radius = 0.5\n",
-    "        num_columns = 8  # 🔵 columnas\n",
-    "        num_rows = 5     # 🔵 filas\n",
+    "        num_columns = 8  #  columnas\n",
+    "        num_rows = 5     #  filas\n",
     "        \n",
     "        def grid_to_screen(col, row):\n",
     "            dx = 1.5 * radius\n",
@@ -192,12 +192,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random  # 👈 para barajar"
+    "import random  # para barajar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "id": "00c644e1-e2a2-43c1-9e72-c75bc0d4a445",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"media\\jupyter\\HexagonalField@2025-04-28@15-35-24.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
+       "<video src=\"media\\jupyter\\HexagonalField@2025-05-25@08-58-55.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "id": "3978e558-c9a5-4be5-93ae-5176a7871d3c",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"media\\jupyter\\HexagonalField@2025-04-28@15-35-48.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
+       "<video src=\"media\\jupyter\\HexagonalField@2025-05-25@08-59-18.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "8b490f43-0f79-42b7-985e-85ef9dec88a9",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"media\\jupyter\\HexagonalField@2025-04-28@15-52-47.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
+       "<video src=\"media\\jupyter\\HexagonalField@2025-05-25@08-59-47.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -467,8 +467,8 @@
     "class HexagonalField(Scene):\n",
     "    def construct(self):\n",
     "        radius = 0.5\n",
-    "        num_columns = 8  # 🔵 columnas\n",
-    "        num_rows = 5     # 🔵 filas\n",
+    "        num_columns = 8  #  columnas\n",
+    "        num_rows = 5     #  filas\n",
     "        \n",
     "        def grid_to_screen(col, row):\n",
     "            dx = 1.5 * radius\n",
@@ -518,7 +518,7 @@
     "            flashes = []\n",
     "\n",
     "            for hexagon in hexagons_list:\n",
-    "                color = random.choice(palette)  # 🎨 elige color al azar\n",
+    "                color = random.choice(palette)  #  elige color al azar\n",
     "                flash = ShowPassingFlash(\n",
     "                    hexagon.copy().set_stroke(color, width=4),\n",
     "                    time_width=0.8,\n",
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "ae0bdda1-6cb1-4c93-be88-f26685799f05",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
     {
      "data": {
       "text/html": [
-       "<video src=\"media\\jupyter\\HexagonalField@2025-04-28@15-32-54.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
+       "<video src=\"media\\jupyter\\HexagonalField@2025-05-25@09-00-11.mp4\" controls autoplay loop style=\"max-width: 75%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -589,8 +589,8 @@
     "class HexagonalField(Scene):\n",
     "    def construct(self):\n",
     "        radius = 0.5\n",
-    "        num_columns = 8  # 🔵 columnas\n",
-    "        num_rows = 5     # 🔵 filas\n",
+    "        num_columns = 8  #  columnas\n",
+    "        num_rows = 5     #  filas\n",
     "        \n",
     "        def grid_to_screen(col, row):\n",
     "            dx = 1.5 * radius\n",
@@ -602,7 +602,7 @@
     "                y += dy / 2\n",
     "            return np.array([x, y, 0])\n",
     "\n",
-    "        # 🎨 Paleta de colores celeste/turquesa\n",
+    "        #  Paleta de colores celeste/turquesa\n",
     "        palette = [\n",
     "            \"#00FFFF\",  # Aqua\n",
     "            \"#00CED1\",  # DarkTurquoise\n",
@@ -612,12 +612,12 @@
     "            \"#5F9EA0\"   # CadetBlue\n",
     "        ]\n",
     "\n",
-    "        hexagon_grid = []  # 📦 Ahora usamos una grilla explícita\n",
+    "        hexagon_grid = []  #  Ahora usamos una grilla explícita\n",
     "        all_hexagons = VGroup()\n",
     "\n",
-    "        for row in range(num_rows):  # 🔁 Primero fila\n",
+    "        for row in range(num_rows):  #  Primero fila\n",
     "            row_list = []\n",
-    "            for col in range(num_columns):  # 🔁 Luego columna\n",
+    "            for col in range(num_columns):  #  Luego columna\n",
     "                pos = grid_to_screen(col, row)\n",
     "                hexagon = RegularPolygon(n=6, radius=radius)\n",
     "                hexagon.move_to(pos)\n",
@@ -634,7 +634,7 @@
     "\n",
     "        # ⚡ Flashear de izquierda a derecha y de arriba a abajo, invertido\n",
     "        flashes = []\n",
-    "        for row in hexagon_grid[::-1]:  # 🚀 Invertimos el orden de las filas\n",
+    "        for row in hexagon_grid[::-1]:  #  Invertimos el orden de las filas\n",
     "            for hexagon in row:\n",
     "                color = random.choice(palette)\n",
     "                flash = ShowPassingFlash(\n",
