intro_v y nueva plantilla_v

--- a/escenas/verticales/zintro_vertical - copia.ipynb
+++ b/escenas/verticales/zintro_vertical - copia.ipynb
@@ -44,14 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0904d09e-1f0b-479f-8560-920c7e5eb280",
    "metadata": {},
    "outputs": [],
    "source": [
-    "config.media_width = \"75%\"\n",
-    "config.verbosity = \"WARNING\"\n",
-    "config.background_color = \"#24043d\""
+    "# config.media_width = \"75%\"\n",
+    "# config.verbosity = \"WARNING\"\n",
+    "# config.background_color = \"#24043d\""
    ]
   },
   {
@@ -104,36 +104,18 @@
     }
    ],
    "source": [
-    "%%writefile PlantillaVertical.py\n",
+    "%%writefile Intro.py\n",
     "from manim import *\n",
     "import numpy as np\n",
-    "# Acabamos de crear un archivo PlantillaVertical.py que se guardará en el directorio actual.\n",
-    "# Después podés ejecutar este archivo desde la consola con:\n",
-    "# manim -pql PlantillaVertical.py EscenaVertical\n",
-    "#from IPython.display import Video\n",
-    "#Video(\"/content/media/videos/PlantillaVertical/1920p15/PlantillaVertical.mp4\", embed=True, width=270, height=540)\n",
     "\n",
-    "# Al cambiar el nombre del archivo, asegúrate de que el nombre de la clase coincida con el nombre del archivo.\n",
+    "# Configuración vertical (1080x1920)\n",
     "config.pixel_width = 1080\n",
     "config.pixel_height = 1920\n",
     "config.frame_width = 5.625\n",
     "config.frame_height = 10.0\n",
     "config.background_color = BLACK\n",
     "config.media_dir = \"./media\"  # Directorio donde se guarda el video\n",
-    "config.background_color = \"#24043d\"\n",
-    "\n",
-    "def etiquetar_ejes(ejes: ThreeDAxes, escala: float = 0.65, color: str = WHITE) -> VGroup:\n",
-    "    \"\"\"Devuelve un grupo con las etiquetas 'X', 'Y', 'Z' posicionadas al final de cada eje.\"\"\"\n",
-    "    etiqueta_x = Text(\"X\", color=color).scale(escala)\n",
-    "    etiqueta_y = Text(\"Y\", color=color).scale(escala)\n",
-    "    etiqueta_z = Text(\"Z\", color=color).scale(escala)\n",
-    "\n",
-    "    etiqueta_x.move_to(ejes.x_axis.get_end() + RIGHT * 0.3)\n",
-    "    etiqueta_y.move_to(ejes.y_axis.get_end() + UP * 0.3)\n",
-    "    etiqueta_z.move_to(ejes.z_axis.get_end() + OUT * 0.3)  # OUT es hacia la cámara\n",
-    "\n",
-    "    return VGroup(etiqueta_x, etiqueta_y, etiqueta_z)\n",
-    "\n",
+    "#config.background_color = \"#24043d\"\n",
     "\n",
     "# Función auxiliar para grilla (igual que antes)\n",
     "def en_grilla(grupo: VGroup, columnas: int, espacio_x: float = 1.0, espacio_y: float = 1.0,\n",
@@ -163,11 +145,78 @@
     "        grupo.shift(DOWN * abs(max_abajo - alto_total) + UP * offset_y)\n",
     "    return grupo\n",
     "\n",
-    "# Escena vertical simple\n",
-    "class EscenaVertical(ThreeDScene):\n",
+    "def entrada_con_rebote(objeto, destino, desde=None, altura_rebote=1.5, duracion_total=2.5):\n",
+    "    if desde is None:\n",
+    "        desde = destino + 5 * UP\n",
+    "\n",
+    "    objeto.move_to(desde)\n",
+    "    desplazamiento_total = desde - destino\n",
+    "\n",
+    "    dur_caida = duracion_total * 0.5\n",
+    "    dur_transicion = duracion_total * 0.1\n",
+    "    dur_rebote = duracion_total - dur_caida - dur_transicion\n",
+    "\n",
+    "    # Animación 1: caída suave (ease-in)\n",
+    "    def anim_caida_fn(mob, alpha):\n",
+    "        y_offset = 1 - (1 - alpha) ** 2  # aceleración suave\n",
+    "        mob.move_to(destino + (1 - y_offset) * desplazamiento_total)\n",
+    "\n",
+    "    caida = UpdateFromAlphaFunc(objeto, anim_caida_fn, run_time=dur_caida, rate_func=linear)\n",
+    "\n",
+    "    # Punto inicial de rebote\n",
+    "    rebote_pico = destino + altura_rebote * UP\n",
+    "\n",
+    "    # Animación 2: transición rápida del destino al pico del rebote\n",
+    "    transicion = objeto.animate.move_to(rebote_pico).set_run_time(dur_transicion).set_rate_func(smooth)\n",
+    "\n",
+    "    # Animación 3: rebote clásico hacia abajo\n",
+    "    def curva_rebote_clasica(t):\n",
+    "        if t < 0.3636:\n",
+    "            y = 7.5625 * t * t\n",
+    "        elif t < 0.7272:\n",
+    "            t -= 0.5454\n",
+    "            y = 7.5625 * t * t + 0.75\n",
+    "        elif t < 0.9090:\n",
+    "            t -= 0.8181\n",
+    "            y = 7.5625 * t * t + 0.9375\n",
+    "        else:\n",
+    "            t -= 0.9545\n",
+    "            y = 7.5625 * t * t + 0.984375\n",
+    "        return y\n",
+    "\n",
+    "    def anim_rebote_fn(mob, alpha):\n",
+    "        y_offset = curva_rebote_clasica(alpha)\n",
+    "        mob.move_to(destino + (1 - y_offset) * altura_rebote * UP)\n",
+    "\n",
+    "    rebote = UpdateFromAlphaFunc(objeto, anim_rebote_fn, run_time=dur_rebote, rate_func=linear)\n",
+    "\n",
+    "    return Succession(caida, transicion, rebote)\n",
+    "\n",
+    "def desaparecer_gradualmente(mob, alpha):\n",
+    "      mob.set_opacity(1 - alpha)\n",
+    "\n",
+    "\n",
+    "def etiquetar_ejes(ejes: ThreeDAxes, escala: float = 0.65, color: str = WHITE) -> VGroup:\n",
+    "    \"\"\"Devuelve un grupo con las etiquetas 'X', 'Y', 'Z' posicionadas al final de cada eje.\"\"\"\n",
+    "    etiqueta_x = Text(\"X\", color=color).scale(escala)\n",
+    "    etiqueta_y = Text(\"Y\", color=color).scale(escala)\n",
+    "    etiqueta_z = Text(\"Z\", color=color).scale(escala)\n",
+    "\n",
+    "    etiqueta_x.move_to(ejes.x_axis.get_end() + RIGHT * 0.3)\n",
+    "    etiqueta_y.move_to(ejes.y_axis.get_end() + UP * 0.3)\n",
+    "    etiqueta_z.move_to(ejes.z_axis.get_end() + OUT * 0.3)  # OUT es hacia la cámara\n",
+    "\n",
+    "    return VGroup(etiqueta_x, etiqueta_y, etiqueta_z)\n",
+    "\n",
+    "\n",
+    "# Escena vertical 3d\n",
+    "class Intro(ThreeDScene):\n",
     "    def construct(self):\n",
     "\n",
-    "        # Faltaría el logo\n",
+    "        logo = ImageMobject(\"logorobo.png\").set_opacity(0.55)  # Asegúrate de que esté en el mismo directorio\n",
+    "        logo.scale(0.45)  # Opcional: escala la imagen\n",
+    "        logo.to_corner(DL).shift(0.54*LEFT + 0.6*DOWN)  # Coloca la imagen en la esquina superior derecha\n",
+    "        #self.add(logo)\n",
     "\n",
     "        # ejes = ThreeDAxes()\n",
     "        # ejes.scale(0.8)\n",
@@ -193,12 +242,57 @@
     "            max_arriba=12.85          # pero corridos 2.85 unidades hacia arriba\n",
     "        )                             # por el offset de la función, en vertical.\n",
     "\n",
-    "        self.play(FadeIn(rectangulos))\n",
-    "        #print(f\"Resolución: alto {self.camera.frame_width} ancho {self.camera.frame_height}\")\n",
-    "        circulo = Circle(radius=0.5, color=YELLOW).move_to(rectangulos[0].get_center())\n",
-    "        circulo2 = Circle(radius=0.5, color=RED).move_to(rectangulos[-1].get_center())\n",
-    "        self.play(FadeIn(circulo), FadeIn(circulo2))\n",
-    "        self.wait(2)"
+    "\n",
+    "        #self.play(FadeIn(rectangulos))\n",
+    "        glow_marco = RoundedRectangle(\n",
+    "            width=4.92,          # Ajustá según la proporción visible del marco interior\n",
+    "            height=7.12,          # Idem\n",
+    "            corner_radius=0.8  # Suavidad de las esquinas\n",
+    "        )\n",
+    "        glow_marco.set_stroke(color=BLUE, width=40, opacity=1)  # Azul turquesa con efecto suave\n",
+    "        glow_marco.set_fill(opacity=0)  # Solo borde\n",
+    "        glow_marco.move_to(ORIGIN).shift(0.02*DOWN)      # Asegurarse que quede alineado\n",
+    "\n",
+    "        # Glow interno\n",
+    "        glow_marco2 = RoundedRectangle(\n",
+    "            width=4.54,          # Ajustá según la proporción visible del marco interior\n",
+    "            height=6.75,          # Idem\n",
+    "            corner_radius=0.8  # Suavidad de las esquinas\n",
+    "        )\n",
+    "        glow_marco2.set_stroke(color=BLUE, width=10, opacity=0.9)  # Azul turquesa con efecto suave\n",
+    "        glow_marco2.set_fill(opacity=0)  # Solo borde\n",
+    "        glow_marco2.move_to(ORIGIN).shift(0.04*DOWN)\n",
+    "\n",
+    "        compu = ImageMobject(\"compu_v_color.png\")\n",
+    "        compu.scale(0.98)\n",
+    "        grupo_intro = Group()\n",
+    "        titulo = Text(\"Los 10 materiales\\nmás caros del mundo!\", color = WHITE)\n",
+    "        titulo.next_to(rectangulos[4], RIGHT, buff=0).shift(1.4*LEFT) #1/2 del espacio entre centros de rectángulos, en x\n",
+    "        compu = ImageMobject(\"compu_v_color.png\").scale(0.98)\n",
+    "\n",
+    "        grupo_intro.add(glow_marco)\n",
+    "        grupo_intro.add(compu)\n",
+    "        grupo_intro.add(glow_marco2)\n",
+    "\n",
+    "        titulo.scale(0.7)\n",
+    "\n",
+    "        self.play(entrada_con_rebote(grupo_intro, destino=ORIGIN, desde = 10 * UP, altura_rebote=0.6,\n",
+    "                                     duracion_total=1.4))\n",
+    "        #self.add_fixed_orientation_mobjects(titulo)\n",
+    "        self.play(Write(titulo))\n",
+    "        grupo_intro.add(titulo)\n",
+    "\n",
+    "        self.play(\n",
+    "                AnimationGroup(\n",
+    "                    grupo_intro.animate.scale(1.6),\n",
+    "                    UpdateFromAlphaFunc(titulo, desaparecer_gradualmente),\n",
+    "                    FadeIn(logo),\n",
+    "                    lag_ratio=0.15  # Ajustá este valor a gusto (0 = todo a la vez, 1 = secuencial)\n",
+    "                ),\n",
+    "                run_time=2.5\n",
+    "            )\n",
+    "\n",
+    "        self.wait(1)\n"
    ]
   },
   {
